--- a/index.html
+++ b/index.html
@@ -198,12 +198,16 @@
 </section> -->
 
 <section class="section">
-  <div class="columns is-centered">
-    <p>
-      <img align="middle" src="./salesforce.png" alt="this slowpoke moves" width="100" />
-      <img align="middle" src="./stanford.png" alt="this slowpoke moves" width="100" />
-    </p>
+  <div class="container is-max-desktop">
+    <div class="columns is-max-desktop is-centered">
+      <p>
+        <center>
+        <img align="middle" src="./salesforce.png" alt="this slowpoke moves" width="100" />
+        <img align="middle" src="./stanford.png" alt="this slowpoke moves" width="100" />
+        </center>
+      </p>
 
+    </div>
   </div>
 
 
