update arxiv link.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="./static/css/ .css">
   <link rel="icon" href="./static/images/favicon.svg">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -136,7 +136,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="todo"
+                <a href="https://arxiv.org/abs/2212.05171"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -377,7 +377,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>todo</code></pre>
+    <pre><code>@article{xue2022ulip,
+  title={ULIP: Learning Unified Representation of Language, Image and Point Cloud for 3D Understanding},
+  author={Xue, Le and Gao, Mingfei and Xing, Chen and Mart{\'\i}n-Mart{\'\i}n, Roberto and Wu, Jiajun and Xiong, Caiming and Xu, Ran and Niebles, Juan Carlos and Savarese, Silvio},
+  journal={arXiv preprint arXiv:2212.05171},
+  year={2022}
+}</code></pre>
   </div>
 </section>
 
@@ -386,7 +391,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="todo">
+         href="https://arxiv.org/abs/2212.05171">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/salesforce/ULIP" class="external-link" disabled>
