CVPR acceptance updates.

--- a/index.html
+++ b/index.html
@@ -273,6 +273,15 @@
   </div>
 </section> -->
 
+<section class="section">
+<div class="columns is-centered has-text-centered">
+<div class="column is-full-width">
+    <h2 class="title is-3">News</h2>
+    <p>[02/28/2023] ULIP has been accepted by CVPR 2023!</p>
+    <p>[03/06/2023] Pre-train code is open-sourced.</p>
+</div>
+</div>
+</section>
 
 <section class="section">
 
