--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">ULIP: Learning Unified Representation of Language, Image and Point Cloud for 3D Understanding</h1>
+          <h1 class="title is-1 publication-title">ULIP: Learning a Unified Representation of Language, Images, and Point Clouds for 3D Understanding</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://www.linkedin.com/in/le-tycho-xue-5abbb9157/">Le Xue</a><sup>1</sup>,</span>
@@ -174,6 +174,7 @@
                   <span>Data</span>
                   </a>
             </div> -->
+
 
           </div>
         </div>
